ENS Names Overflowing issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -114,7 +114,7 @@ textarea {
 }
 
 .column {
-  width: 160px;
+  width: 180px;
   text-overflow: ellipsis;
   overflow: hidden;
 }
